force-app/main/default/objects/Product2/fields/Assessment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Type__c</fullName>
    <label>Assessment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>