force-app/main/default/objects/Product2/fields/fw2__Non_Installment__c.field-meta.xml
<CustomField>
    <fullName>fw2__Non_Installment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non-Installment</label>
    <type>Checkbox</type>
</CustomField>