force-app/main/default/objects/Product2/fields/Line_Item_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Product_Name__c</fullName>
    <label>Line Item Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>