force-app/main/default/objects/Product2/fields/Pass_Through_Type__c.field-meta.xml
<CustomField>
    <fullName>Pass_Through_Type__c</fullName>
    <description>This specifies which entity will be billing us for this passthrough fee. Typically a Scheme Owner or Accreditation Owner.</description>
    <inlineHelpText>For F - Fees (Accreditation) revenue type only, select which entity will bill us for this line item.</inlineHelpText>
    <label>Pass-Through Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFCI Member</fullName>
            </value>
            <value>
                <fullName>RFCI Non-Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>