force-app/main/default/objects/Product2/fields/Price_Type__c.field-meta.xml
<CustomField>
    <fullName>Price_Type__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Rate</fullName>
            </value>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Hourly Rate</fullName>
            </value>
            <value>
                <fullName>Quantity Based</fullName>
            </value>
            <value>
                <fullName>Per Day</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Biennial</fullName>
            </value>
            <value>
                <fullName>Per Meeting</fullName>
            </value>
            <value>
                <fullName>Per Word</fullName>
            </value>
            <value>
                <fullName>Per Group</fullName>
            </value>
            <value>
                <fullName>Per Person</fullName>
            </value>
            <value>
                <fullName>Per Assessment</fullName>
            </value>
            <value>
                <fullName>Per Verification</fullName>
            </value>
            <value>
                <fullName>Per Plan</fullName>
            </value>
            <value>
                <fullName>Monthly Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>