force-app/main/default/objects/Product2/fields/Price_Variability__c.field-meta.xml
<CustomField>
    <fullName>Price_Variability__c</fullName>
    <label>Price Variability</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>