force-app/main/default/objects/Product2/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <description>Product revenue type.</description>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>P - Professional Fees</fullName>
            </value>
            <value>
                <fullName>R - Reimbursable/Travel</fullName>
            </value>
            <value>
                <fullName>F - Fees (Accreditation)</fullName>
            </value>
            <value>
                <fullName>L - Lab Fees</fullName>
            </value>
            <value>
                <fullName>C - Commission Revenue</fullName>
            </value>
            <value>
                <fullName>M - Misc./Other</fullName>
            </value>
            <value>
                <fullName>RN - Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>